--- a/views/men.erb
+++ b/views/men.erb
@@ -1,5 +1,5 @@
 <div class="my-div">
-  <a href="/men/new">New Man!</a>
+  <a href="/men/new">Create Post Man!</a>
   <% @men.each do |man|  %>
     <h1>Hi my name is <%= man[:name] %>!</h1>
     <h1>I am <%= man[:age] %> years old.</h1>
@@ -8,3 +8,5 @@
     <hr>
   <% end %>
 </div>
+
+<a href="/">Go Home</a>
